Get the latest version of this file at http://episoder.sourceforge.net/
===============================================================================

v0.5.0-RC3 (xx xxx 2009)
========================
 * Realized that the previous attempt at improving episoder was flawed
 * Rewrote the whole thing in python
 * Parsed data is now stored in an sqlite3 database

v0.5.0-RC2 (06 Nov 2008)
========================
 * Fixed an issue where combining data from tv.com and epguides.com would
   create corrupted YAML files

v0.5.0-RC1 (05 Nov 2008)
========================
 * Completely rewrote the plugin API (see README.plugins)
 * Episoder now requires python to run (see README)
 * New tv.com plugin (see README.tvcom)
 * New output layer (see README.plugins)
 * Switched to YAML for intermediate data storage
 * Updated docs

v0.4.7 (24 Feb 2007)
====================
 * Fixed a parsing issue introduced with 0.4.6

v0.4.6 (24 Feb 2007)
====================
 * Discovered yet another formatting possibility on epguides.com (used for
   instance for the show "Midsomer Murders") and adapted the parser accordingly
 * Slightly updated the man page

v0.4.5 (23 Jan 2007)
====================
 * Fixed some epguides parser issues

v0.4.4 (19 Nov 2006)
====================
 * Fixed the -i option when building the database (did the exact opposite of
   what it was supposed to do)

v0.4.3 (24 Oct 2006)
====================
 * We now actually honor the -i option when building the database
 * Added the possibility to override a show's name in the config file. This was
   needed for the new webisoder, a web-based episoder. Find out more about it
   at http://www.webisoder.net/
 * Oops, forgot to update episoder's version number in the last release...
 * Fixed a bug in the new epguides.com parser which would not drop episodes
   without a date

v0.4.2 (21 Oct 2006)
====================
 * Don't ignore the config file passed with -c anymore when building the db