@@ -5,6 +5,8 @@ v0.5.0-RC3 (xx xxx 2009)
 ========================
  * Realized that the previous attempt at improving episoder was flawed
  * Rewrote the whole thing in python
+ * Wrote a brand new tv.com parser
+ * Small fixes in the epguides.com parser
  * Parsed data is now stored in an sqlite3 database
 
 v0.5.0-RC2 (06 Nov 2008)
